# devops-health-monitor

./: .gitignore  Cargo.toml  README.md  Secrets.toml.example  Shuttle.toml  schema.sql
frontend/: index.html  script.js  style.css
src/: main.rs
