[package]
name = "devops-health-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "json"] }

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["gzip", "brotli", "json"] }

# Environment loading for local dev
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Shuttle runtime & integrations
shuttle-runtime = "0.46"
shuttle-axum = "0.46"
shuttle-shared-db = { version = "0.46", features = ["postgres"] }

# Database (SQLx + Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# Useful middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Concurrency helpers
futures = "0.3"

# Error handling
anyhow = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
